--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.1",
+    "axios": "^1.6.7",
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
+    "js-cookie": "^3.0.5",
+    "mdb-react-ui-kit": "^7.2.0",
+    "next": "14.1.3",
     "react": "^18",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18",
-    "next": "14.2.5"
+    "react-redux": "^9.1.0",
+    "react-telegram-login": "^1.1.2",
+    "react-toastify": "^10.0.4",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0"
   }
 }
